--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>ru.levelup</groupId>
     <artifactId>jdbc</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
